--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <h1 class="heading">Memorize -- && -- Match</h1>
-    <div id ="start" class="overlay-text ">Start</div>
+    <div id ="start" class="overlay-text visible">Start</div>
     <div id = "game-over" class="overlay-text ">Game Over<span class = "overlay-text-small">Restart</span></div>
     <div id = "victory-screen" class="overlay-text">You WIN<span class = "overlay-text-small">Restart</span></div>
     <div class="game-container">
